--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "gsap": "^3.13.0",
     "lucide-react": "^0.344.0",
+    "netlify": "^22.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
