--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.344.0",
     "netlify": "^22.2.1",
