--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
     "lucide-react": "^0.344.0",
     "netlify": "^22.2.1",
