--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "netlify": "^22.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
