--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,13 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.html [L]
 
+# Fix for Vite build - ensure proper MIME types
+<IfModule mod_mime.c>
+    AddType application/javascript .js
+    AddType application/javascript .mjs
+    AddType text/css .css
+</IfModule>
+
 # Security headers
 <IfModule mod_headers.c>
     # Prevent clickjacking
