--- a/.htaccess
+++ b/.htaccess
@@ -14,6 +14,23 @@ RewriteRule . /index.html [L]
     AddType text/css .css
 </IfModule>
 
+# Increase file size limits and timeouts
+<IfModule mod_php.c>
+    php_value upload_max_filesize 50M
+    php_value post_max_size 50M
+    php_value max_execution_time 300
+    php_value max_input_time 300
+</IfModule>
+
+# Disable compression for large JS files to prevent connection resets
+<IfModule mod_deflate.c>
+    SetEnvIfNoCase Request_URI \
+        \.(?:gif|jpe?g|png)$ no-gzip dont-vary
+    SetEnvIfNoCase Request_URI \
+        \.(?:exe|t?gz|zip|bz2|sit|rar)$ no-gzip dont-vary
+    SetEnvIfNoCase Request_URI \.js$ no-gzip dont-vary
+</IfModule>
+
 # Security headers
 <IfModule mod_headers.c>
     # Prevent clickjacking
