--- a/.htaccess
+++ b/.htaccess
@@ -1,49 +1,39 @@
 # Enable URL rewriting
 RewriteEngine On
 
-# Handle client-side routing for React Router
-# If the requested file or directory doesn't exist, serve index.html
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.html [L]
+# CRITICAL: Serve static files directly BEFORE routing rules
+RewriteCond %{REQUEST_FILENAME} -f [OR]
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^ - [L]
 
-# Fix for Vite build - ensure proper MIME types
+# Handle client-side routing for React Router
+# Only apply to requests that aren't actual files
+RewriteRule ^ /index.html [L]
+
+# Fix MIME types - MOST IMPORTANT
 <IfModule mod_mime.c>
     AddType application/javascript .js
     AddType application/javascript .mjs
     AddType text/css .css
+    AddType image/svg+xml .svg
 </IfModule>
 
-# Increase file size limits and timeouts
-<IfModule mod_php.c>
-    php_value upload_max_filesize 50M
-    php_value post_max_size 50M
-    php_value max_execution_time 300
-    php_value max_input_time 300
-</IfModule>
-
-# Disable compression for large JS files to prevent connection resets
+# Remove the conflicting deflate rules for .js files
 <IfModule mod_deflate.c>
-    SetEnvIfNoCase Request_URI \
-        \.(?:gif|jpe?g|png)$ no-gzip dont-vary
-    SetEnvIfNoCase Request_URI \
-        \.(?:exe|t?gz|zip|bz2|sit|rar)$ no-gzip dont-vary
-    SetEnvIfNoCase Request_URI \.js$ no-gzip dont-vary
-</IfModule>
-
-# Security headers
-<IfModule mod_headers.c>
-    # Prevent clickjacking
-    Header always append X-Frame-Options SAMEORIGIN
+    # Compress text files
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE text/xml
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE image/svg+xml
     
-    # Prevent MIME type sniffing
-    Header set X-Content-Type-Options nosniff
-    
-    # Enable XSS protection
-    Header set X-XSS-Protection "1; mode=block"
-    
-    # Referrer Policy
-    Header set Referrer-Policy "strict-origin-when-cross-origin"
+    # DO NOT disable compression for JS - let it compress
+    AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/x-javascript
+    AddOutputFilterByType DEFLATE text/javascript
 </IfModule>
 
 # Cache static assets
@@ -63,68 +53,24 @@ RewriteRule . /index.html [L]
     ExpiresByType application/javascript "access plus 1 month"
     ExpiresByType text/javascript "access plus 1 month"
     
-    # Fonts
-    ExpiresByType font/woff "access plus 1 month"
-    ExpiresByType font/woff2 "access plus 1 month"
-    ExpiresByType application/font-woff "access plus 1 month"
-    ExpiresByType application/font-woff2 "access plus 1 month"
-    
-    # HTML files (shorter cache for better updates)
+    # HTML (shorter cache)
     ExpiresByType text/html "access plus 1 hour"
 </IfModule>
 
-# Compress files
-<IfModule mod_deflate.c>
-    # Compress HTML, CSS, JavaScript, Text, XML and fonts
-    AddOutputFilterByType DEFLATE application/javascript
-    AddOutputFilterByType DEFLATE application/rss+xml
-    AddOutputFilterByType DEFLATE application/vnd.ms-fontobject
-    AddOutputFilterByType DEFLATE application/x-font
-    AddOutputFilterByType DEFLATE application/x-font-opentype
-    AddOutputFilterByType DEFLATE application/x-font-otf
-    AddOutputFilterByType DEFLATE application/x-font-truetype
-    AddOutputFilterByType DEFLATE application/x-font-ttf
-    AddOutputFilterByType DEFLATE application/x-javascript
-    AddOutputFilterByType DEFLATE application/xhtml+xml
-    AddOutputFilterByType DEFLATE application/xml
-    AddOutputFilterByType DEFLATE font/opentype
-    AddOutputFilterByType DEFLATE font/otf
-    AddOutputFilterByType DEFLATE font/ttf
-    AddOutputFilterByType DEFLATE image/svg+xml
-    AddOutputFilterByType DEFLATE image/x-icon
-    AddOutputFilterByType DEFLATE text/css
-    AddOutputFilterByType DEFLATE text/html
-    AddOutputFilterByType DEFLATE text/javascript
-    AddOutputFilterByType DEFLATE text/plain
-    AddOutputFilterByType DEFLATE text/xml
+# Security headers
+<IfModule mod_headers.c>
+    Header set X-Content-Type-Options nosniff
+    Header set X-Frame-Options SAMEORIGIN
+    Header set X-XSS-Protection "1; mode=block"
+    Header set Referrer-Policy "strict-origin-when-cross-origin"
 </IfModule>
 
 # Prevent access to sensitive files
-<Files ".htaccess">
+<FilesMatch "\.(htaccess|json|ts|tsx|jsx)$">
     Order allow,deny
     Deny from all
-</Files>
+</FilesMatch>
 
-<Files "package.json">
-    Order allow,deny
-    Deny from all
-</Files>
-
-<Files "package-lock.json">
-    Order allow,deny
-    Deny from all
-</Files>
-
-<Files "vite.config.ts">
-    Order allow,deny
-    Deny from all
-</Files>
-
-<Files "tsconfig.json">
-    Order allow,deny
-    Deny from all
-</Files>
-
-# Error pages (optional)
+# Error pages
 ErrorDocument 404 /index.html
 ErrorDocument 500 /index.html
