--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,11 @@
 RewriteEngine On
 RewriteBase /
 
-# Serve static files directly
+# Explicitly serve static assets (JS, CSS, images) directly
+RewriteCond %{REQUEST_URI} \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|pdf)$ [NC]
+RewriteRule ^ - [L]
+
+# Serve static files and directories directly
 RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^ - [L]
